<resources>
    <string name="app_name">SEHS4542-Lab4</string>
    <string name="ex1">Ex1</string>
    <string name="ex2">Ex2</string>
    <string name="ex3">Ex3</string>
    <string name="lifecycle_title">Activity Lifecycle Demonstration</string>
    <string name="lifecycle_instruction">Rotate device, press back, or switch apps to trigger
        lifecycle events</string>
    <string name="lifecycle_created">22060775S Fung Wai Ki onCreate</string>
    <string name="lifecycle_started">22060775S Fung Wai Ki onStart</string>
    <string name="lifecycle_resumed">22060775S Fung Wai Ki onResume</string>
    <string name="lifecycle_paused">22060775S Fung Wai Ki onPause</string>
    <string name="lifecycle_stopped">22060775S Fung Wai Ki onStop</string>
    <string name="lifecycle_destroyed">22060775S Fung Wai Ki onDestroy</string>
    <string name="go_back">Go Back</string>
    
    <!-- Season Selector -->
    <string name="season_selector_title">Select a Season</string>
    <string name="season_spring">Spring photo</string>
    <string name="season_summer">Summer photo</string>
    <string name="season_autumn">Autumn photo</string>
    <string name="season_winter">Winter photo</string>
    
    <!-- Season Detail -->
    <string name="season_detail_format">Here is %s</string>
    <string name="season_toast_spring">Spring is the season of rebirth and renewal!</string>
    <string name="season_toast_summer">Summer is the season of warmth and abundant sunshine!</string>
    <string name="season_toast_autumn">Autumn is the season of colorful leaves and harvest!</string>
    <string name="season_toast_winter">Winter is the season of snow and serenity!</string>
</resources>